# kodeck

./: .gitignore  .npmrc  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  test-sample.txt  vercel.json
apps/client/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: app.tsx  file-tree.test.ts  file-tree.ts  main.tsx  search-utils.test.ts  search-utils.ts  store.ts  style.css
apps/client/src/components/: config-sidebar.tsx  config-view.tsx  main-panel.tsx  notifications.tsx  search-bar.tsx  search-results.tsx  sidebar.tsx  tab-bar.tsx  (+1 more)
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: index.html  package.json  prerender.mjs  tsconfig.json  vite.config.ts
apps/landing/public/: llms.txt  robots.txt
apps/landing/src/: app.tsx  entry-server.tsx  main.tsx  style.css
apps/server/: package.json  tsconfig.json
apps/server/scripts/: build-sidecar.mjs
apps/server/src/: claude-session.ts  config-scanner.ts  config.ts  git-parsers.test.ts  git-parsers.ts  index.ts  projects.ts  router.ts  session-store.ts  static.ts  terminal-session.ts
docs/plans/: 2026-03-22-chat-markdown-and-thinking-indicator.md  2026-03-22-kodeck-design.md  2026-03-22-kodeck-implementation.md  2026-03-22-worktrees-design.md  2026-03-22-worktrees-implementation.md
scripts/: build-npm.mjs  patch-app-bundle.mjs
(+15 files in other folders)
