[package]
name = "kodeck"
version = "0.0.1"
description = "Kodeck Desktop"
authors = ["Vladislav Arbatov"]
edition = "2021"

[lib]
name = "kodeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
